fixed: make sure that the extra dropdown icon is not visible

--- a/views/default/css/entity_to_title_menu/title_menu.css
+++ b/views/default/css/entity_to_title_menu/title_menu.css
@@ -4,7 +4,7 @@
 	
 		.elgg-menu-closed:after,
 		.elgg-menu-opened:after {
-			content: unset;
+			content: unset !important;
 		}
 	}
 }
